--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^4.5.2",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
-    "jquery": "^3.6.0",
-    "bootstrap": "^4.5.2"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
